--- a/Project0/css_Files/style1.scss
+++ b/Project0/css_Files/style1.scss
@@ -1,15 +1,13 @@
-$pad : 50px;
+$pad : 30px;
 
 .navbar-brand {
     font-size: 26px;
     color : white;
 }
-body{
-    padding-top:110px;
-}
+
 #Left_section{
 
-    background-color: #80ccff;
+    background-color: #99ccff;
     padding: $pad;
 
     h3 {                   // nesting
@@ -25,9 +23,11 @@ body{
     padding: 10px;
     text-align: center;
 }
-.Bio{
+
+.topBand{
     padding: 20px;
 }
+
 p {
     font-size: 16px;
     text-align: left;
@@ -35,14 +35,23 @@ p {
 #certificates > h3{
     text-align: left;
 }
-// #Left_section > h3{
-//     font-weight:bold; 
-//     color: #666666; 
-//     text-align:left;
-// }
+
+#Left_section > h3{
+    font-weight:bold; 
+    color: #666666; 
+    text-align:left;
+}
+
 #Dual_sheet  h2{
     font-weight: bold;
 }
+
 button {
     font-size: 30px;
+}
+
+.Contacts {
+    padding: 20px;
+    background-color: #4d4d4d;
+    color: white;
 }
