--- a/project2/static/index_stl.scss
+++ b/project2/static/index_stl.scss
@@ -40,7 +40,11 @@ input:focus + label {
     padding: 20px;
 }
 
-#0f9d58
-#54b948
-#55ab55
-#34a853
+// #0f9d58
+// #54b948
+// #55ab55
+// #34a853
+// #075e54
+// #128c7e
+// #dcf8c6
+// #25d366
