--- a/project1/templates/search.html
+++ b/project1/templates/search.html
@@ -56,3 +56,7 @@
         </div>
     </div>    
 {% endblock %}
+
+    <!-- <script type="text/javascript">
+        myVar = message({{vars|tojson}})
+    </script> -->
