--- a/project2/templates/channel.html
+++ b/project2/templates/channel.html
@@ -4,20 +4,21 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='channel_stl.css') }}">
 {% endblock %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Flack</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
-            <li>
-                <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
-            </li>
-        </ul>
-    </div>
-</nav>
+
 {%  block body %}
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Flack</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav">
+                <li>
+                    <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
+                </li>
+            </ul>
+        </div>
+    </nav><br><br><br>
     <div class="row">
         <div class="col-md-2 side-panel"><p></p></div>
         <div class="col-md-8">
@@ -34,7 +35,7 @@
                 <!--filled by socket.io-->
             </div>
             <div>
-                <form id="form" action="{{url_for('results')}}" method="POST">
+                <form id="form">
                     <label for="message">Message:</label>
                     <input id="message" type="text" name="message">
                     <input type="submit" value="Create">
