--- a/project2/templates/channel_list.html
+++ b/project2/templates/channel_list.html
@@ -4,24 +4,24 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='channel_list_stl.css') }}">
 {% endblock %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Flack</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
-            <li>
-                <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
-            </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('create_channel') }}">Create Channel</a>
-            </li> -->
-        </ul>
-    </div>
-</nav>
-{% block body %}
 
+{% block body %}
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Flack</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav">
+                <li>
+                    <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('create_channel') }}">Create Channel</a>
+                </li> -->
+            </ul>
+        </div>
+    </nav><br><br><br><br>
     <div class="row">
         <h2>Create a new Channel:</h2>
         <form id="form">
