--- a/project2/templates/register.html
+++ b/project2/templates/register.html
@@ -4,9 +4,6 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='register_stl.css') }}">
     <script type="text/javascript"{{url_for('static',filename='register.js')}}></script>
-    <!-- <script type="text/javascript">
-        myVar = message({{vars|tojson}})
-    </script> -->
 
 {% endblock %}
 {% block body %}
@@ -35,7 +32,7 @@
         <div class="col-md-8" id="bocx">
             <h2> Register </h2>
             <br>
-            <form id="form"><!--May have to change 'search' to 'index'-->
+            <form id="form" action="{{url_for('register')}}" method="POST"><!--May have to change 'search' to 'index'-->
                 <!-- <form action="{{url_for('register')}}" method="POST"> -->
                 <label for="fname">Full Name</label>
                 <input id="fname" type="text" name="fname" placeholder="Enter Full Name"><br><br>
