--- a/project2/static/register_stl.scss
+++ b/project2/static/register_stl.scss
@@ -1,24 +1,27 @@
 .body {
     margin-top: 30px; 
     padding: 30px;
-    color:#25d366;
+    // color:#25d366;
 }
+
 .body > image {
     float: right;
 }
-.seperable > h2 { 
-    display: inline-block;
-}
-.seperable > h5 { 
-    color: #505050;
-}
-.seperable > h1 {
+.separable > h1 { 
     display: inline-block;
     color: #0f9d58;
     font-weight: bolder;
 }
-.loginBocx{
-    padding: 33px;
+.separable > h2 { 
+    display: inline-block;
+}
+
+.separable > h5 { 
+    color: #505050;
+}
+
+.registerBocx{
+    padding: 37px;
     background-color: #dcf8c6;
     border-radius: 30px;
     color: #34a853;
@@ -28,11 +31,6 @@
 .footer {
     background-color: #55ab55;
 }
-
-
-// .seperable {
-//     padding: 20px;
-// }
 
 // #0f9d58
 // #54b948
