--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="loginBocx">  
                         <h2>Login</h2> <br>           
-                        <form id="form" class="form-label form-css-label"> <!--for my own styling-->
+                        <form id="form"> <!--for my own styling-->
                             <fieldset>
                                 <label for="email">Email: </label><br>
                                 <input id="email" type="email" name="email" autocomplete="off" required=""><br><br><!--placeholder="email"-->   
