--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %} Flack {% endblock %}
 {% block style %} 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script rel="stylesheet" href="{{ url_for('static', filename='index.js') }}"></script>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='index_stl.css') }}">
     
 {% endblock %}
