--- a/project2/templates/register.html
+++ b/project2/templates/register.html
@@ -2,7 +2,7 @@
 {% block title %} Flack : Register {% endblock %}
 {% block style %} 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script rel="stylesheet" href="{{url_for('static',filename='register.js')}}"></script>
+    <script src="{{url_for('static',filename='register.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='register_stl.css') }}">
 
 {% endblock %}
@@ -61,16 +61,25 @@
                 <div class="registerBocx">
                     <h2> Register </h2><br>
                     <form id="form"><!--May have to change 'search' to 'index'-->
-                        <!-- <form action="{{url_for('register')}}" method="POST"> -->
-                        <label for="fname">Full Name:</label><br>
-                        <input id="fname" type="text" name="fname" placeholder="Enter Full Name" autocomplete="off" required=""><br><br>
-                        <label for="email">e-mail:</label><br>
-                        <input id="email" type="email" name="email" placeholder="Enter email" autocomplete="off" required=""><br><br>
-                        <label for="dname">Username:</label><br>
-                        <input id="dname" type="text" name="dname" placeholder="Enter Username" autocomplete="off" required=""><br><br>
-                        <label for="passwd">Password:</label><br>
-                        <input id="passwd" type="password" name="passwd" placeholder="Enter Password" autocomplete="off" required=""><br><br><!--key = PASSWD-->
-                        <input type="submit" value="Submit">
+                        <fieldset>
+                            <label for="fname">Full Name:</label><br>
+                            <input id="fname" type="text" name="fname" placeholder="Enter Full Name" autocomplete="off" required=""><br><br>
+                        </fieldset>
+                        <fieldset>
+                            <label for="email">e-mail:</label><br>
+                            <input id="email" type="email" name="email" placeholder="Enter email" autocomplete="off" required=""><br><br>
+                        </fieldset>
+                        <fieldset>
+                            <label for="dname">Username:</label><br>
+                            <input id="dname" type="text" name="dname" placeholder="Enter Username" autocomplete="off" required=""><br><br>
+                        </fieldset>
+                        <fieldset>
+                            <label for="passwd">Password:</label><br>
+                            <input id="passwd" type="password" name="passwd" placeholder="Enter Password" autocomplete="off" required=""><br><br><!--key = PASSWD-->
+                        </fieldset>
+                        <fieldset>
+                            <button type="submit" value="Submit" class="btn btn-primary">Register</button>
+                        </fieldset> 
                     </form>
                 </div>               
             </div>
@@ -94,3 +103,4 @@
 <!-- <div class="alert alert-primary" role="alert">
     Error! Looks like <a href="{{ url_for('index') }}" class="alert-link">Display Name</a> is already taken.
 </div> -->
+<!-- <form action="{{url_for('register')}}" method="POST"> -->
