improved js and channel variable changed to channels

--- a/project2/templates/channel_list.html
+++ b/project2/templates/channel_list.html
@@ -17,12 +17,9 @@
                 <li>
                     <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('create_channel') }}">Create Channel</a>
-                </li> -->
             </ul>
         </div>
-    </nav><br><br><br><br>
+    </nav>
     <div class="row">
         <h2>Create a new Channel:</h2>
         <form id="form">
