--- a/project2/templates/channel_list.html
+++ b/project2/templates/channel_list.html
@@ -7,15 +7,16 @@
 {% endblock %}
 
 {% block body %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Flack</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav">
-                <li>
-                    <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0f9d58;">
+        <a class="navbar-brand" href="#" style="color: white; font-weight: bolder;">FLACK.</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> 
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-item nav-link active" href="{{ url_for('index') }}" method="POST"> <button type="button" style="background-color: white; border-radius: 24px;" class="btn btn-outline-success">Login</button> <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
