--- a/project2/templates/channel.html
+++ b/project2/templates/channel.html
@@ -7,23 +7,35 @@
 {% endblock %}
 
 {%  block body %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Flack</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav">
-                <li>
-                    <a class="nav-item nav-link active" href="{{ url_for('logout') }}" method="POST"> Logout </a>
-                </li>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0f9d58;">
+        <a class="navbar-brand" href="#" style="color: white; font-weight: bolder;">FLACK.</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> 
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Menu
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Signed in as {{ dname }}</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item active" href="{{ url_for('logout') }}" method="POST"> <button type="button" style="background-color: white; border-radius: 24px;" class="btn btn-outline-success">Logout</button> <span class="sr-only">(current)</span></a>
+                    </div>
+                  </li>
             </ul>
         </div>
-    </nav><br><br><br>
+    </nav>
+<!--rest content-->
+    <div class="row">
+        <div class="col-md-12"><br></div>        
+    </div>
     <div class="row">
         <div class="col-md-2 side-panel"><p></p></div>
         <div class="col-md-8">
-            <div>
+            <div class="bocx">
                 {% for c in Channel %}
                     {{ c[0] }}<br>
                     {{ c[1] }}<br>
@@ -35,7 +47,7 @@
             <div id="push">
                 <!--filled by socket.io-->
             </div>
-            <div>
+            <div class="bottomBar">
                 <form id="form">
                     <label for="message">Message:</label>
                     <input id="message" type="text" name="message">
