added time and author in messages

--- a/project2/static/register_stl.scss
+++ b/project2/static/register_stl.scss
@@ -1,7 +1,14 @@
 .body {
     margin-top: 30px; 
     padding: 30px;
-    // color:#25d366;
+    // color: #0f9d58;
+// color : #54b948;
+// color : #55ab55;
+// color : #34a853;
+// color : #075e54;
+// color : #128c7e;
+// color : #dcf8c6;
+// color : #25d366;
 }
 
 .body > image {
@@ -31,12 +38,3 @@
 .footer {
     background-color: #55ab55;
 }
-
-// #0f9d58
-// #54b948
-// #55ab55
-// #34a853
-// #075e54
-// #128c7e
-// #dcf8c6
-// #25d366
