--- a/project2/static/channel_stl.css
+++ b/project2/static/channel_stl.css
@@ -1,9 +1,16 @@
 .body {
   margin-top: 30px;
   padding: 30px;
-  color: #25d366; }
+  background-color: #ece5dd; }
 
-.bottomBar {
-  background-color: #505050; }
+body {
+  background-color: #ece5dd; }
+
+.bocx {
+  background-color: #dcf8c6;
+  padding: 20px;
+  border: 2px solid;
+  border-color: #abee77;
+  border-radius: 30px; }
 
 /*# sourceMappingURL=channel_stl.css.map */
