--- a/project2/static/channel_stl.scss
+++ b/project2/static/channel_stl.scss
@@ -1,9 +1,16 @@
 .body {
     margin-top: 30px; 
     padding: 30px;
-    color:#25d366;
+    background-color: #ece5dd;
+}
+body {
+    background-color: #ece5dd;
 }
 
-.bottomBar {
-    background-color: #505050; 
+.bocx {
+    background-color: #dcf8c6;
+    padding: 20px;
+    border: 2px solid;
+    border-color: #abee77;
+    border-radius: 30px;
 }
