added message cards

--- a/project2/templates/channel.html
+++ b/project2/templates/channel.html
@@ -48,9 +48,9 @@
                     </div>
                 {% endfor %}
                 
-                <!-- <div class="push"> -->
-                    <ul id="push"></ul>
-                <!-- </div> -->
+                <div class="push">
+                    <!-- <ul id="push"></ul> -->
+                </div>
                 <nav class="navbar fixed-bottom navbar-light" style="background-color: #ece5dd;">
                     <form id="form" class="form-inline">
                         <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
