added channel memory feature

--- a/project2/static/channel_list_stl.scss
+++ b/project2/static/channel_list_stl.scss
@@ -1,16 +1,30 @@
 .body {
-    margin-top: 30px; 
     padding: 30px;
-    color:#25d366;
+    background-color: #ece5dd;
 }
 
 .cards {
-    background-color: #99ffcc;
+    background-color: #dcf8c6;
     padding: 20px;
     border: 2px solid;
     border-radius: 30px;
+    border-color: #abee77;
   } 
 
 .cards > h3 {
     color: #660066;
+}
+
+.createBocx {
+    background-color: white;
+    padding: 20px;
+    border-radius: 15px;
+}
+
+.createBocx > h2 {
+    color: #25d366;
+}
+
+body{
+    background-color: #ece5dd;
 }
