--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -9,7 +9,7 @@
 {% block body %}
 <!--Navigation bar-->
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #0f9d58;">
+    <nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: #0f9d58;">
         <a class="navbar-brand" href="#" style="color: white; font-weight: bolder;">FLACK.</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span> 
